2002-11-25  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/abi_check.cc: Add CXXABI_1.2.1 as compatible.
	* config/linker-map.gnu: Version __cxa_guard_acquire,
	__cxa_guard_release, __cxa_guard_abort in CXXABI_1.2.1.

2002-11-25  Paolo Carlini  <pcarlini@unitus.it>
            Nathan Myers  <ncm@cantrip.org>

	* src/localename.cc
	(locale::_Impl::_Impl(const char*, size_t)):
	Avoid strtok for thread safety.

2002-11-25  Stephen M. Webb  <stephen@bregmasoft.com>

  	* testsuite/testsuite_allocator.h: New file.
	* testsuite/testsuite_allocator.cc: New file.
	* testsuite/Makefile.am: Added testsuite_allocator to test library.
	* testsuite/testsuite_hooks.h: Added more detailed tracker objects
	gnu_copy_constructor, gnu_assignment_operator, and gnu_destructor.
	* testsuite/testsuite_hooks.cc: Added new static objects definitions.
	* testsuite/23_containers/vector_capacity.cc: Added reserve() tests.
	* testsuite/23_containers/vector_ctor.cc: Added a plethora of tests.
	* testsuite/23_containers/deque_ctor.cc: Added a slew of new tests.

2002-11-25  Mark Mitchell  <mark@codesourcery.com>

	* libsupc++/Makefile.am (sources): Add guard.cc.
	* libsupc++/Makefile.in: Regenerated.
	* libsupc++/cxxabi.h (__cxa_guard_acquire): New function.
	(__cxa_guard_release): Likewise.
	(__cxa_guard_abort): Likewise.
	* libsupc++/guard.cc: New file.

2002-11-25  Wolfgang Bangerth  <bangerth@ticam.utexas.edu>

	* include/std/std_complex.h
	(operator<<(basic_ostream&, const complex&)): Prefer 'x'
	to "x" for efficiency sake.
	* src/locale.cc (locale::locale(const char*)): Ditto.

2002-11-24  Paolo Carlini  <pcarlini@unitus.it>

	* src/locale.cc (locale::locale(const char*)):
	Trivial cosmetic tweaks.

2002-11-22  Laszlo Ersek  <erseklaszlo@chello.hu>
            Paolo Carlini  <pcarlini@unitus.it>

	PR libstdc++/8645
	* include/bits/stl_tree.h (_Rb_tree_rebalance_for_erase):
	Don't check that __w->_M_left != 0 and __w->_M_right != 0
	when they can't be otherwise.
