@@ -228,9 +228,9 @@ namespace std
 				    + _S_extra_categories_size] =
     {
       "LC_CTYPE", 
-      "LC_NUMERIC", 
+      "LC_NUMERIC",
+      "LC_TIME",   
       "LC_COLLATE", 
-      "LC_TIME", 
       "LC_MONETARY",
       "LC_MESSAGES"
     };
